--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -496,6 +496,7 @@ header .entry-meta {
 	  min-height: 1px;
 	  padding-right: 15px;
 	  padding-left: 15px;
+	  padding-top: 45px;
 	}
 	@media (min-width: 768px) {
 	  .col-sm-3{
