--- a/_layouts/post-index.html
+++ b/_layouts/post-index.html
@@ -27,7 +27,7 @@
   </div><!-- /.header-title -->
 </div><!-- /.entry-header -->
 
-<div id="main" role="main">
+<div id="post-index_main" role="main">
   {{ content }}
 </div><!-- /#main -->
 
