--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -2,7 +2,7 @@ body {
 	margin: 0;
 	padding: 0;
 	width: 100%;
-	background-image:url("/images/bg-canvas_bg.jpg");
+	background-image:url("images/bg-canvas_bg.jpg");
 }
 
 // Main
