--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,9 +34,9 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
-<!-- Webfonts -->
+<!-- Webfonts
 <link href="//fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic" rel="stylesheet" type="text/css">
-
+ -->
 <meta http-equiv="cleartype" content="on">
 
 <!-- Load Modernizr -->
