--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,6 +1,6 @@
 <script src="{{ site.url }}/assets/js/vendor/jquery-1.9.1.min.js"></script>
 <script src="{{ site.url }}/assets/js/scripts.min.js"></script>
-
+<script src="{{ site.url }}/assets/js/classfications.js"></script>
 {% if site.google_analytics %}
 <!-- Asynchronous Google Analytics snippet -->
 <script>
