--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -560,6 +560,23 @@ header .entry-meta {
 		background-color: rgba(0,0,6,0.05);
 		
 	}
+	//-------.classfication-entry-header-wrap--------
+	.classfication-entry-header-wrap{
+		float: right;
+		line-height: 45px;
+		margin-right: 5%;
+	}
+	.classfication-entry-header {
+		width: 100%;
+		overflow: hidden;
+		position: fixed;
+		background-color: #375a7f;
+		z-index: 2000;
+		margin-top: -60px;
+	}
+	.classfication-header-title-wrap h3{
+			color:#fff;
+	}
 }
 .entry-image-index {
 	margin-top: -25px;
