--- a/_layouts/classification.html
+++ b/_layouts/classification.html
@@ -11,11 +11,11 @@
 
 {% include browser-upgrade.html %}
 {% include navigation.html %}
-
-<div class="entry-header">
-  <div class="header-title">
-    <div class="header-title-wrap">
-      <h1>{{ site.title }}</h1>
+<br><br><br>
+<div class="classfication-entry-header">
+  <div class="classfication-header-title">
+    <div class="classfication-header-title-wrap">
+      <h3>{{ site.title }}</h3>
     </div><!-- /.header-title-wrap -->
   </div><!-- /.header-title -->
 </div><!-- /.entry-header -->
