--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 {% include head.html %}
-<script src="{{ site.url }}/assets/js/classfications.js"></script>
+<script src="{{ site.url }}/assets/js/tags.js"></script>
 </head>
 
 <body id="post-index" {% if page.image.feature %}class="feature"{% endif %}>
