归档分类实现

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -47,7 +47,7 @@
 			<a href="#">Posts</a>
 			<ul class="dl-submenu">
 				<li><a href="{{ site.url }}/posts/">Categories</a></li>
-				<li><a href="{{ site.url }}/archiving/">archiving</a></li>
+				<li><a href="{{ site.url }}/archives/">archives</a></li>
 				<li><a href="{{ site.url }}/tags/">Tags</a></li>
 			</ul>
 		</li>
