--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -604,7 +604,7 @@ header .entry-meta {
 // --------------------------------------------------
 .footer-wrapper {
 	@include clearfix;
-	margin: 2em auto;
+	margin: 1em auto;
 	text-align: center;
 	color: lighten($text-color,20);
 	a {
@@ -696,6 +696,21 @@ header .entry-meta {
 	background-color: #7f7f7f;
 }
 /**分类的icon**/
-.category-icon:before{content:"\f07b"}
-.tag-icon:before{content:"\f02c"}
-.archive-icon:before{content:"\f187"}
+@font-face {font-family: 'iconfont';
+    src: url('/blog/assets/fonts/icon/iconfont.eot'); /* IE9*/
+    src: url('/blog/assets/fonts/icon/iconfont.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('/blog/assets/fonts/icon/iconfont.woff') format('woff'), /* chrome、firefox */
+    url('/blog/assets/fonts/icon/iconfont.ttf') format('truetype'), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
+    url('/blog/assets/fonts/icon/iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
+}
+.iconfont{
+    font-family:"iconfont" !important;
+    font-size:16px;font-style:normal;
+    -webkit-font-smoothing: antialiased;
+    -webkit-text-stroke-width: 0.2px;
+    -moz-osx-font-smoothing: grayscale;
+}
+
+.category-icon:before{ content: "\3453"; }
+.tag-icon:before{ content: "\e8d9"; }
+.archive-icon:before{ content: "\e634"; }
