--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -560,6 +560,13 @@ header .entry-meta {
 		background-color: rgba(0,0,6,0.05);
 		
 	}
+	.post-list-item-date{
+		float: right;
+		font-size: 9px;
+		display: block;
+		margin-top: -5px;
+		margin-right: -25px;
+	}
 	//-------.classfication-entry-header--------
 	.classfication-header-title-wrap{
 		float: right;
