--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -1,3 +1,6 @@
+*{
+	white-space: pre;
+}
 body {
 	margin: 0;
 	padding: 0;
@@ -7,7 +10,7 @@ body {
 /**table start**/
 table{
   border-collapse: collapse;
-  border-spacing: 0;  
+  border-spacing: 0;
   display: table;
   border-color: gray;
   line-height: 1.6;
@@ -132,9 +135,9 @@ border: 1px solid #ddd;
 }
 .entry-image {
 	position: relative;
-	top: -50%; 
-	left: -50%; 
-	width: 200%; 
+	top: -50%;
+	left: -50%;
+	width: 200%;
 	height: 200%;
 	min-height: $feature-image-height;
 	overflow: hidden;
@@ -148,12 +151,12 @@ border: 1px solid #ddd;
 		background-color: rgba($base-color,0.3);
 	}
 	img {
-		position: absolute; 
-		top: 0; 
-		left: 0; 
-		right: 0; 
-		bottom: 0; 
-		margin: auto; 
+		position: absolute;
+		top: 0;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin: auto;
 		min-width: 50%;
 		min-height: $feature-image-height; // match .entry-image min-height
 	}
@@ -355,7 +358,7 @@ header .entry-meta {
 	h3 {
 		margin: 0;
 		@include font-rem(28);
-		a { 
+		a {
 			color: $text-color;
 		}
 		@media #{$medium} {
@@ -369,11 +372,11 @@ header .entry-meta {
 .list-item {
 	width: 100%;
 	text-align: left;
-	h4 { 
+	h4 {
 		@include font-rem(18);
-		margin-bottom: 0; 
+		margin-bottom: 0;
 	}
-	span { 
+	span {
 		display: block;
 		@include font-rem(14);
 		color: lighten($base-color,50);
@@ -387,7 +390,7 @@ header .entry-meta {
 	}
 }
 
-// Post Index 
+// Post Index
 // --------------------------------------------------
 #post-index {
 	#class_main {
@@ -433,8 +436,8 @@ header .entry-meta {
 	//---.categories-list-item  .my-badge----
 	.categories-list-item{
 		display: block;
-		padding:8px 15px; 
-		border-bottom:1px solid #ddd; 
+		padding:8px 15px;
+		border-bottom:1px solid #ddd;
 
 		transition:0.4s ease;
 		-webkit-transition:0.4s ease;
@@ -442,7 +445,7 @@ header .entry-meta {
 		-o-transition:0.4s ease;
 	}
 	.categories-list-item:last-of-type{
-		border-bottom:none; 
+		border-bottom:none;
 	}
 	.categories-list-item:hover{
 		background-color: rgba(0,0,10,0.075);
@@ -479,7 +482,7 @@ header .entry-meta {
 	//---.shadow-corner-curl---
 	.shadow-corner-curl{
 		position: relative;
-		background-color:#f8f8fd; 
+		background-color:#f8f8fd;
 		-webkit-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
 		-moz-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
 		-o-box-shadow: 0 1px 5px rgba(0,0,0,0.4),0 0 20px rgba(0,0,0,0.1) inset;
@@ -569,10 +572,10 @@ header .entry-meta {
 	//-------.post-list-item--------
 	.post-list-item{
 		display: block;
-		padding:8px 30px 10px 30px; 
+		padding:8px 30px 10px 30px;
 		border-bottom:1px solid #ddd;
 
-		transition:0.4s ease; 
+		transition:0.4s ease;
 		-webkit-transition:0.4s ease;
 		-moz-transition:0.4s ease;
 		-o-transition:0.4s ease;
@@ -587,7 +590,7 @@ header .entry-meta {
 	}
 	.post-list-item:hover{
 		background-color: rgba(0,0,6,0.05);
-		
+
 	}
 	.post-list-item-date{
 		float: right;
@@ -652,7 +655,7 @@ header .entry-meta {
 // --------------------------------------------------
 .socialcount {
 	@include font-rem(16);
-	li { 
+	li {
 		padding-left: 10px;
 		padding-right: 10px;
 	}
@@ -720,9 +723,9 @@ header .entry-meta {
 	width:0;
 	height: 0;
 	border-right: 15px solid transparent;
-	border-left: 15px solid transparent; 
+	border-left: 15px solid transparent;
 	border-bottom: 15px solid #7f7f7f;
-	
+
 }
 #top .stick{
 	margin:0 auto;
