--- a/_sass/_gist.scss
+++ b/_sass/_gist.scss
@@ -27,7 +27,13 @@
   .highlight {
     background:#fff;
   }
-
+/*
+注释掉错误的样式
+  .highlight .err {
+    color:#a61717;
+    background-color:#e3d2d2;
+  }
+*/
   .highlight .cp {
     color:#999;
     font-weight:700;
