--- a/_sass/_pygments.scss
+++ b/_sass/_pygments.scss
@@ -13,7 +13,7 @@
 	.lineno { padding-right: 24px; color: #8f908a;}
 	.hll { background-color: #49483e }
 	.c { color: #75715e } /* Comment */
-	.err { color: #960050; background-color: #1e0010 } /* Error */
+	/*.err { color: #960050; background-color: #1e0010 }  Error */
 	.k { color: #66d9ef } /* Keyword */
 	.l { color: #ae81ff } /* Literal */
 	.n { color: #f8f8f2 } /* Name */
