--- a/_layouts/classification.html
+++ b/_layouts/classification.html
@@ -5,7 +5,8 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"><!--<![endif]-->
 <head>
 {% include head.html %}
-{% include scripts.html %}     
+{% include scripts.html %}
+<script type="text/javascript" src="{{ site.url }}/assets/js/pagination.js"></script>
 <script src="{{ site.url }}/assets/js/classfications.js"></script>
 </head>
 
