--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -577,9 +577,11 @@ header .entry-meta {
 		-moz-transition:0.4s ease;
 		-o-transition:0.4s ease;
 	}
+	/*
 	.post-list-item:last-of-type{
 		border-bottom: none;
 	}
+	*/
 	.post-list-item h2{
 		font-size: 20px;
 		margin: 8px 0 8px 0;
