--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -40,6 +40,8 @@
       </div><!-- /.header-title-wrap -->
     </header>
     <div class="entry-content">
+    {% if page.image.credit %}
+      {% if page.isOriginal !=false %}<b>此文章为原创文章，引用请标记文章出处 {{ site.url }}{{ page.url }}</b>{% endif %}
       {{ content }}
       <footer class="entry-meta">
         <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}" class="tag"><span class="term">{{ tag }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
@@ -59,7 +61,7 @@
   </footer>
 </div><!-- /.footer-wrapper -->
 
-{% include scripts.html %}	        
+{% include scripts.html %}
 
 </body>
 </html>
