--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,7 +8,13 @@
 </head>
 
 <body id="post" {% if page.image.feature %}class="feature"{% endif %}>
-
+<div class="classfication-entry-header">
+  <div class="classfication-header-title">
+    <div class="classfication-header-title-wrap">
+      <h3>moguangquan-blog</h3>
+    </div><!-- /.header-title-wrap -->
+  </div><!-- /.header-title -->
+</div>
 {% include browser-upgrade.html %}
 {% include navigation.html %}
 
@@ -40,7 +46,7 @@
       </div><!-- /.header-title-wrap -->
     </header>
     <div class="entry-content">
-      {% if page.isOriginal != false %}<b>此文章为原创文章，引用请标记文章出处 {{ site.url }}{{ page.url }}</b>{% endif %}
+      {% if page.isOriginal != false %}<b>此文章为原创文章，引用请标记文章出处: <a href="{{ site.url }}{{ page.url }}" title="{{ page.title }}">{{ page.title }}</a></b>{% endif %}
       {{ content }}
       <footer class="entry-meta">
         <span class="entry-tags">{% for tag in page.tags %}<a href="{{ site.url }}/tags/#{{ tag }}" title="Pages tagged {{ tag }}" class="tag"><span class="term">{{ tag }}</span></a>{% unless forloop.last %}{% endunless %}{% endfor %}</span>
