--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
  <div id="top" data-toggle="tooltip" data-placement="left" title="back to top">
-      <a href="javascript:;">
+      <a href=" ">
         <div class="arrow"></div>
         <div class="stick"></div>
       </a>
